Small alignment fix where the trigger name, trigger modified and invalid state is misaligned

--- a/src/client/flogo/flow/triggers/configurator/trigger/trigger.component.less
+++ b/src/client/flogo/flow/triggers/configurator/trigger/trigger.component.less
@@ -57,7 +57,7 @@
 
 .trigger-label {
   margin-left: 8px;
-  flex: 1;
+  width: 148px;
   line-height: 1;
 }
 
